--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
 
                 <div class=" d-flex justify-content-center">
-                    <button id="btn1" type="button" class="btn btn-info btn-lg m"><a href="barbearia.html" >Entrar</a> </button>
+                    <button id="btn1" type="button" class="btn btn-info btn-lg m"><a href="frontend/barbearia.html" >Entrar</a> </button>
                 </div>
                 
                 <div class="d-flex justify-content-center m-3">
